src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Install_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Install Location</label>
        <referenceTo>Install_Location__c</referenceTo>
        <relationshipLabel>Products at this Location</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAUnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__oppprod_height__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Height</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__oppprod_iccomcod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Inventory Commodity Code</description>
        <label>Inventory Commodity Code</label>
        <referenceTo>rstk__iccomcod__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>oppprods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__oppprod_length__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Length</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__oppprod_pricesrce__c</fullName>
        <description>Price Source</description>
        <label>Price Source</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__oppprod_project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Project Master associated with this Opportunity line</description>
        <inlineHelpText>The Project Master associated with this Opportunity line</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__oppprod_rsprice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Priced From Rootstock</description>
        <label>Priced From Rootstock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__oppprod_socomm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Group</description>
        <label>Product Group</label>
        <referenceTo>rstk__socomm__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>oppprods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__oppprod_weight__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Weight</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__oppprod_width__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Width</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>